<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DisplayScoresFragment">

    <TextView
        android:id="@+id/no_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_scores"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_scores"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="@dimen/sixteen_dp"
            />

        <TextView
            android:id="@+id/school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            android:hint="@string/school_name"
            android:layout_margin="@dimen/sixteen_dp"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/reading_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reading_average"
            android:textSize="@dimen/sixteen_sp"
            android:layout_margin="@dimen/sixteen_dp"
            />

        <TextView
            android:id="@+id/math_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/math_average"
            android:textSize="@dimen/sixteen_sp"
            android:layout_margin="@dimen/sixteen_dp"
            />

        <TextView
            android:id="@+id/writing_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writing_average"
            android:textSize="@dimen/sixteen_sp"
            android:layout_margin="@dimen/sixteen_dp"
            />
    </LinearLayout>

</FrameLayout>